--- a/DecisionTree.ipynb
+++ b/DecisionTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 788,
    "id": "3fe06475-f688-4cde-8e9b-e2075b166625",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 789,
    "id": "88a80ebb-fa5f-4b26-832f-b702b95a67f1",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 789,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 790,
    "id": "3b89c2f5-1ed8-4a5e-b741-bac15a94e4a8",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 791,
    "id": "5b906239-e8a0-49f2-8289-038276feb143",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 792,
    "id": "24e31cea-0e3b-4bc6-99bc-789e1f80ce1a",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 793,
    "id": "5ec90481-5a9b-4112-8bfe-02b61a31de63",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 794,
    "id": "a492e56e-5e69-41a8-8152-599010df1eaf",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 795,
    "id": "a0c06721-862e-4bcc-82ec-497cc890a355",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 796,
    "id": "12d07272-a95d-45c1-a8e9-2111d850b99c",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 797,
    "id": "904b9075-61d5-4d9c-91c5-69c71934bad0",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 798,
    "id": "416769e7-763b-4a5d-a888-db24c58c7559",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 799,
    "id": "c2ce2b25-f1aa-4cf1-9c2c-bdc3f0a7f588",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 800,
    "id": "2153c447-8c53-4a97-aa2c-f031e3e42cf6",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 801,
    "id": "a1690103-e77f-4fe8-956c-90f5409b30ec",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 802,
    "id": "8d987ad5-3096-4145-b672-2b5ff8a55afa",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 803,
    "id": "6c056347-3e1a-4ce3-b911-19837dfef2ae",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 804,
    "id": "b927ed65-a4d1-4d02-8e3c-bf72c3c6f0bb",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 805,
    "id": "6f4d5dc4-4f1b-4e27-9d9f-290f98e0b627",
    "metadata": {},
    "outputs": [],
@@ -489,9 +489,23 @@
     "    def set_model(node):\n",
     "        nonlocal model\n",
     "        model = node\n",
+    "\n",
+    "    # sprawdź czy podzbiór z podziału jest liściem\n",
+    "    # jak tak to go ustaw w drzewie przy pomocy metody ustawiania\n",
+    "    # jak nie to dodaj ten podzbiór na kolejkę do dalszego przetworzenia\n",
+    "    def check_node(division_items, column, set_node, cur_columns):\n",
+    "        if is_leaf(division_items) or len(cur_columns) == 1:\n",
+    "            set_node(LeafNode(leaf_value(division_items, data, decision)))\n",
+    "        else:\n",
+    "            nodes.append((division_items, column, set_node, cur_columns))\n",
     "    \n",
     "    S = [(i, row[decision]) for (i, row) in data.iterrows()]\n",
-    "    \n",
+    "\n",
+    "\n",
+    "    # wywal kolumnę decyzyjną z kolumn,\n",
+    "    # żeby nie brać jej pod uwagę przy budowaniu drzewa\n",
+    "    columns = data.columns.drop(decision)\n",
+    "\n",
     "    # podzbiór, cecha, metoda ustawiania node w drzewie\n",
     "    # zaczynamy z jednym elementem w kolejce, żeby nasz program działał\n",
     "    # cały zbiór jako podzbiór,\n",
@@ -499,47 +513,32 @@
     "    # przekazujemy funkcję ustawiania modelu jako ostatni parametr\n",
     "    # potem przekażemy takie funkcje, które ustawiają konkretne\n",
     "    # krawędzie drzewa, wraz z tym jak będziemy go budować.\n",
-    "    nodes = [(S, None, set_model)]\n",
-    "\n",
-    "    # sprawdź czy podzbiór z podziału jest liściem\n",
-    "    # jak tak to go ustaw w drzewie przy pomocy metody ustawiania\n",
-    "    # jak nie to dodaj ten podzbiór na kolejkę do dalszego przetworzenia\n",
-    "    def check_node(division_items, column, set_node):\n",
-    "        if is_leaf(division_items):\n",
-    "            set_node(LeafNode(leaf_value(division_items, data, decision)))\n",
-    "        else:\n",
-    "            nodes.append((division_items, column, set_node))\n",
-    "\n",
-    "    # wywal kolumnę decyzyjną z kolumn,\n",
-    "    # żeby nie brać jej pod uwagę przy budowaniu drzewa\n",
-    "    columns = data.columns.drop(decision)\n",
+    "    nodes = [(S, None, set_model, columns)]\n",
     "\n",
     "    # pracuj do póki kolejka nie będzie pusta\n",
     "    while len(nodes) > 0:\n",
     "        # pobranie pierwszego elementu z kolejki\n",
-    "        S, feature, set_node = nodes.pop(0)\n",
+    "        S, feature, set_node, cur_columns = nodes.pop(0)\n",
     "\n",
     "        # policz entropię potrzebną do gaina\n",
     "        initial_entropy = entropy(S)\n",
     "\n",
     "        # wywal kolumnę z najbliższego korzenia\n",
     "        # nie chcemy powtarzać w kółko tego samego podziału\n",
-    "        cur_columns = columns.drop(feature) if feature is not None else columns\n",
+    "        cur_columns = cur_columns.drop(feature) if feature is not None else columns\n",
+    "\n",
     "        # szukamy najlepszego podziału\n",
     "        best_gain = float('-inf')\n",
     "        best_division = None\n",
     "        best_column = None\n",
     "        for column in cur_columns:\n",
     "            division = divide(S, data, column, decision)\n",
+    "\n",
     "            curr_gain = gain(initial_entropy, cond_entropy(division.items()))\n",
     "            if curr_gain > best_gain:\n",
     "                best_gain = curr_gain\n",
     "                best_division = division\n",
     "                best_column = column\n",
-    "\n",
-    "        if best_gain <= 0:\n",
-    "            set_node(LeafNode(leaf_value(S, data, decision)))\n",
-    "            continue\n",
     "\n",
     "        # jeśli podział jest podziałem liczbowym\n",
     "        if type(best_division) is NumericDivision:\n",
@@ -547,14 +546,15 @@
     "            node = IntervalNode(best_column, best_division.boundary)\n",
     "            # sprawdź czy podzbiór podziału danej krawędzi jest liściem i jak tak to go dodaj\n",
     "            # a jak nie to dodaj ten podzbiór na kolejkę do przetworzenia (to samo w kolejnej linii)\n",
-    "            check_node(best_division.smaller, best_column, node.set_smaller_node)\n",
-    "            check_node(best_division.greater_or_equal, best_column, node.set_greater_or_equal_node)\n",
+    "            check_node(best_division.smaller, best_column, node.set_smaller_node, cur_columns)\n",
+    "            check_node(best_division.greater_or_equal, best_column, node.set_greater_or_equal_node, cur_columns)\n",
+    "\n",
     "        else: # jeśli podział jest podziałem na klasy tekstowe\n",
     "            node = ClassNode(best_column)\n",
     "            # sprawdź czy podzbiór podziału danej krawędzi jest liściem i jak tak to go dodaj\n",
     "            # a jak nie to dodaj ten podzbiór na kolejkę do przetworzenia\n",
     "            for k, v in best_division.edges.items():\n",
-    "                check_node(best_division.edges[k], best_column, partial(ClassNode.add_edge, node, k))\n",
+    "                check_node(best_division.edges[k], best_column, partial(ClassNode.add_edge, node, k), cur_columns)\n",
     "\n",
     "            # zapewnij, że w drzewie będą krawędzie, których już brakuje w podzbiorze zbioru danych\n",
     "            for k in (set(data[best_column].unique().tolist()) - set(best_division.edges.keys())):\n",
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 806,
    "id": "6fc87ec9-fca9-4f47-9eb3-c0509dec8e9b",
    "metadata": {},
    "outputs": [
@@ -581,32 +581,22 @@
       "    name: Sex,\n",
       "    edges: {\n",
       "        female: IntervalNode(\n",
-      "            name: Pclass,\n",
-      "            tboundary: 3,\n",
+      "            name: SibSp,\n",
+      "            tboundary: 1,\n",
       "            smaller: LeafNode(1),\n",
       "            greater_or_equal: IntervalNode(\n",
-      "                name: SibSp,\n",
-      "                tboundary: 1,\n",
+      "                name: Pclass,\n",
+      "                tboundary: 3,\n",
       "                smaller: LeafNode(1),\n",
       "                greater_or_equal: IntervalNode(\n",
       "                    name: Age,\n",
-      "                    tboundary: 8,\n",
-      "                    smaller: LeafNode(1),\n",
+      "                    tboundary: 33,\n",
+      "                    smaller: LeafNode(0),\n",
       "                    greater_or_equal: IntervalNode(\n",
       "                        name: Parch,\n",
-      "                        tboundary: 2,\n",
-      "                        smaller: IntervalNode(\n",
-      "                            name: Age,\n",
-      "                            tboundary: 33,\n",
-      "                            smaller: LeafNode(0),\n",
-      "                            greater_or_equal: LeafNode(1)\n",
-      "                        ),\n",
-      "                        greater_or_equal: IntervalNode(\n",
-      "                            name: Age,\n",
-      "                            tboundary: 17,\n",
-      "                            smaller: LeafNode(0),\n",
-      "                            greater_or_equal: LeafNode(1)\n",
-      "                        )\n",
+      "                        tboundary: 0,\n",
+      "                        smaller: LeafNode(0),\n",
+      "                        greater_or_equal: LeafNode(0)\n",
       "                    )\n",
       "                )\n",
       "            )\n",
@@ -618,7 +608,17 @@
       "                name: Age,\n",
       "                tboundary: 19,\n",
       "                smaller: LeafNode(1),\n",
-      "                greater_or_equal: LeafNode(0)\n",
+      "                greater_or_equal: IntervalNode(\n",
+      "                    name: SibSp,\n",
+      "                    tboundary: 1,\n",
+      "                    smaller: IntervalNode(\n",
+      "                        name: Parch,\n",
+      "                        tboundary: 1,\n",
+      "                        smaller: LeafNode(1),\n",
+      "                        greater_or_equal: LeafNode(1)\n",
+      "                    ),\n",
+      "                    greater_or_equal: LeafNode(0)\n",
+      "                )\n",
       "            ),\n",
       "            greater_or_equal: IntervalNode(\n",
       "                name: Parch,\n",
@@ -629,9 +629,9 @@
       "                    tboundary: 33,\n",
       "                    smaller: LeafNode(0),\n",
       "                    greater_or_equal: IntervalNode(\n",
-      "                        name: Parch,\n",
-      "                        tboundary: 5,\n",
-      "                        smaller: LeafNode(1),\n",
+      "                        name: SibSp,\n",
+      "                        tboundary: 1,\n",
+      "                        smaller: LeafNode(0),\n",
       "                        greater_or_equal: LeafNode(0)\n",
       "                    )\n",
       "                )\n",
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 807,
    "id": "72b09c40-8f3b-4179-8e68-66c4776a82af",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.9\n"
+      "Test accuracy: 0.75\n"
      ]
     }
    ],
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 808,
    "id": "d2034d6b-5572-48a7-b15f-7daf647ea57e",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy: 0.975\n"
+      "Train accuracy: 0.875\n"
      ]
     }
    ],
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 809,
    "id": "cc6198ef",
    "metadata": {},
    "outputs": [],
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 810,
    "id": "1f91bb86-d1e5-4c8d-81fa-7e06110776a1",
    "metadata": {},
    "outputs": [
@@ -740,31 +740,23 @@
      "text": [
       "|---- Sex\n",
       "|     |---- female\n",
-      "|     |     |---- Pclass < 3\n",
+      "|     |     |---- SibSp < 1\n",
       "|     |     |     |---- YES\n",
       "|     |     |     |     |---- 1\n",
       "|     |     |     |---- NO\n",
-      "|     |     |     |     |---- SibSp < 1\n",
+      "|     |     |     |     |---- Pclass < 3\n",
       "|     |     |     |     |     |---- YES\n",
       "|     |     |     |     |     |     |---- 1\n",
       "|     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |---- Age < 8\n",
+      "|     |     |     |     |     |     |---- Age < 33\n",
       "|     |     |     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |---- 0\n",
       "|     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |---- Parch < 2\n",
+      "|     |     |     |     |     |     |     |     |---- Parch < 0\n",
       "|     |     |     |     |     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |     |     |     |     |---- Age < 33\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 0\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- 0\n",
       "|     |     |     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |     |     |---- Age < 17\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 0\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- 0\n",
       "|     |---- male\n",
       "|     |     |---- Pclass < 3\n",
       "|     |     |     |---- YES\n",
@@ -772,7 +764,15 @@
       "|     |     |     |     |     |---- YES\n",
       "|     |     |     |     |     |     |---- 1\n",
       "|     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |     |     |     |---- SibSp < 1\n",
+      "|     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |---- Parch < 1\n",
+      "|     |     |     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |---- 0\n",
       "|     |     |     |---- NO\n",
       "|     |     |     |     |---- Parch < 1\n",
       "|     |     |     |     |     |---- YES\n",
@@ -782,9 +782,9 @@
       "|     |     |     |     |     |     |     |---- YES\n",
       "|     |     |     |     |     |     |     |     |---- 0\n",
       "|     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |---- Parch < 5\n",
+      "|     |     |     |     |     |     |     |     |---- SibSp < 1\n",
       "|     |     |     |     |     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- 0\n",
       "|     |     |     |     |     |     |     |     |     |---- NO\n",
       "|     |     |     |     |     |     |     |     |     |     |---- 0\n"
      ]
